--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,14 @@ html, body {
 
 /*-----End of Navbar-----*/
 
+/*-----Error handler-----*/
+
+.error{
+  color: red;
+}
+
+/*-----End of error handler-----*/
+
 #flip {
   height:50px;
   overflow:hidden;
